fix: unexpected image bar gap

--- a/src/options/options.module.scss
+++ b/src/options/options.module.scss
@@ -81,7 +81,6 @@
           width: 100%;
           height: 100%;
           display: block;
-          object-fit: contain;
         }
       }
     }
